# VTK_Projects

./: .gitignore  CMakeLists.txt  README.md  Types.cpp  Types.h  VtkHeaders.h  main.cpp
BoundsAndBorders/: BoundsAndBorders.cpp  BoundsAndBorders.h
CovnexHull/: CovnexHull.cpp  CovnexHull.h
Curvatures/: Curvatures.cpp  Curvatures.h
Cutters/: Cutters.cpp  Cutters.h
Distances/: Distances.cpp  Distances.h
Edges/: Edges.cpp  Edges.h
GeometricFigures/: GeometricFigures.cpp  GeometricFigures.h
Holes/: Holes.cpp  Holes.h
Intersection/: IntersectionTests.cpp  IntersectionTests.h
Isosurface/: Isosurface.cpp  Isosurface.h
Lines/: Lines.cpp  Lines.h
OBBTreeTests/: OBBTreeTests.cpp  OBBTreeTests.h
Objects_Geometry/: PointsAndLines.cpp  PointsAndLines.h
Rotation/: Rotation.cpp  Rotation.h
Splitter/: Splitter.cpp  Splitter.h
TestsAndExperiments/: TestsAndExperiments.cpp  TestsAndExperiments.h
Text/: Text.cpp  Text.h
Utilities/: Utilities.cpp  Utilities.h
VtkMatrices/: VtkMatrices.cpp  VtkMatrices.h
